sources += files(
    'Application.vala',
    'Crypt.vala',
    'Database.vala',
    'Export.vala',
    'Exports.vala',
    'Goals.vala',
    'Journal.vala',
    'Journals.vala',
    'MainWindow.vala',
    'Preferences.vala',
    'RSS.vala',
    'Security.vala',
    'SidebarEditor.vala',
    'SidebarEntries.vala',
    'Statistics.vala',
    'TagBox.vala',
    'TagEntry.vala',
    'Template.vala',
    'Templater.vala',
    'Templates.vala',
    'TemplateVars.vala',
    'Themes.vala',
    'TextArea.vala',
    'Utils.vala'
)

subdir('exports')
