sources += files(
    'Application.vala',
    'Crypt.vala',
    'Database.vala',
    'DateSelector.vala',
    'Export.vala',
    'Exports.vala',
    'Goal.vala',
    'Goals.vala',
    'Journal.vala',
    'Journals.vala',
    'Locker.vala',
    'MainWindow.vala',
    'Preferences.vala',
    'Quotes.vala',
    'Reviewer.vala',
    'RSS.vala',
    'Security.vala',
    'SidebarEditor.vala',
    'SidebarEntries.vala',
    'Statistics.vala',
    'TagBox.vala',
    'TagEntry.vala',
    'Template.vala',
    'Templater.vala',
    'Templates.vala',
    'TemplateVars.vala',
    'Themes.vala',
    'TextArea.vala',
    'Utils.vala'
)

subdir('exports')
subdir('goals')
