sources += files(
    'Application.vala',
    'Crypt.vala',
    'Database.vala',
    'DateSelector.vala',
    'Export.vala',
    'Exports.vala',
    'Goal.vala',
    'Goals.vala',
    'ImageArea.vala',
    'Journal.vala',
    'Journals.vala',
    'Locker.vala',
    'MainWindow.vala',
    'MarkdownFuncs.vala',
    'Preferences.vala',
    'Quotes.vala',
    'Reviewer.vala',
    'RSS.vala',
    'SavedReview.vala',
    'SavedReviews.vala',
    'Security.vala',
    'SidebarEditor.vala',
    'SidebarEntries.vala',
    'SpellChecker.vala',
    'Statistics.vala',
    'TagBox.vala',
    'TagEntry.vala',
    'TagList.vala',
    'Template.vala',
    'Templater.vala',
    'Templates.vala',
    'TemplateVars.vala',
    'Themes.vala',
    'TextArea.vala',
    'Utils.vala'
)

subdir('exports')
subdir('goals')
